--- a/pennateste/nginx-svc.yaml
+++ b/pennateste/nginx-svc.yaml
@@ -4,9 +4,11 @@ metadata:
   name: fellipe-nginx
   namespace: teste 
 spec:
+  type: NodePort
   ports:
-  - name: http
+  - port: 32000
+    name: http
     targetPort: 80
-    port: 80
+    protocol: TCP
   selector:
     app: fellipe-nginx
