--- a/pennateste/nginx-svc.yaml
+++ b/pennateste/nginx-svc.yaml
@@ -6,9 +6,10 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 32000
-    name: http
-    targetPort: 80
+  - name: http
+    nodePort: 32000
+    port: 80
+    targetPort: server
     protocol: TCP
   selector:
     app: fellipe-nginx
