--- a/Jenkins/jenkins_pv.yaml
+++ b/Jenkins/jenkins_pv.yaml
@@ -12,7 +12,8 @@ spec:
     - ReadWriteOnce
   hostPath:
     path: "/var/jenkins"
-    
+    type: DirectoryOrCreate
+
 # apiVersion: v1
 # kind: PersistentVolume
 # metadata:
