--- a/Jenkins/jenkins_service.yaml
+++ b/Jenkins/jenkins_service.yaml
@@ -5,16 +5,19 @@ metadata:
   labels:
     app: jenkins
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - name: ui
+      nodePort: 32001
       port: 8080
       targetPort: 8080
       protocol: TCP
     - name: slave
+      nodePort: 32002
       port: 50000
       protocol: TCP
     - name: http
+      nodePort: 32003
       port: 80
       targetPort: 8080
   selector:
