--- a/Jenkins/jenkins_deployment.yaml
+++ b/Jenkins/jenkins_deployment.yaml
@@ -1,45 +1,48 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: jenkins
-  labels:
-    app: jenkins
+  namespace: jenkins
 spec:
-  selector:
-    matchLabels:
-      app: jenkins
   replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
   template:
     metadata:
       labels:
-        app: jenkins
+        app: master
     spec:
-      serviceAccountName: jenkins
       containers:
-      - name: jenkins
-        image: jenkins/jenkins:2.60.3-alpine
-        imagePullPolicy: IfNotPresent
-        env:
-        - name: JAVA_OPTS
-          value: "-Xms512m -Xmx512m"
+      - name: master
+        image: jenkins/jenkins:2.67
         ports:
         - containerPort: 8080
-          protocol: TCP
         - containerPort: 50000
-          protocol: TCP
+        readinessProbe:
+          httpGet:
+            path: /login
+            port: 8080
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 2
+          failureThreshold: 5
+        env:
+        - name: JENKINS_OPTS
+          valueFrom:
+            secretKeyRef:
+              name: jenkins
+              key: options
+        - name: JAVA_OPTS
+          value: '-Xmx1400m'
         volumeMounts:
         - mountPath: /var/jenkins_home
           name: jenkins
-      restartPolicy: Always
-      securityContext:
-        runAsUser: 0
-      terminationGracePeriodSeconds: 30
-      volumes:
-      - name: jenkins
-        persistentVolumeClaim:
-          claimName: jenkins-claim
+        resources:
+          limits:
+            cpu: 500m
+            memory: 1500Mi
+          requests:
+            cpu: 500m
+            memory: 1500Mi
+        volumes:
+        - name: jenkins
+          persistentVolumeClaim:
+            claimName: jenkins-claim
