--- a/Jenkins/jenkins_deployment.yaml
+++ b/Jenkins/jenkins_deployment.yaml
@@ -22,7 +22,7 @@ spec:
       serviceAccountName: jenkins
       containers:
       - name: jenkins
-        image: "keaz/jenkins-master:latest"
+        image: "jenkins/jenkins:lts"
         imagePullPolicy: IfNotPresent
         env:
         - name: JAVA_OPTS
